--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,16 +51,14 @@
                   {%- endif -%}
                 </a>
               </li>
-              {% if site.blog_nav_title %}
               <!-- Blog -->
-              <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
-                  {%- if page.url contains 'blog' -%}
+              <li class="nav-item {% if page.url contains 'readinglist' %}active{% endif %}">
+                <a class="nav-link" href="{{ '/readinglist/' | relative_url }}">Reading List
+                  {%- if page.url contains 'readinglist' -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
                 </a>
               </li>
-              {%- endif %}
 
               <!-- Other pages -->
               {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
