--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
               </li>
               <!-- Blog -->
               <li class="nav-item {% if page.url contains 'readinglist' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/readinglist/' | relative_url }}">Reading List
+                <a class="nav-link" href="{{ '/readinglist' | relative_url }}">Reading List
                   {%- if page.url contains 'readinglist' -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
